# LLM-Failure-Analysis-Risk-Intelligence-System---FARIS

./: .env.example  .env.production  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.ts  tsconfig.json  vite.config.ts
app/: config.py  main.py
app/api/: dependencies.py
app/api/routes/: __init__.py  analysis.py  cases.py  taxonomy.py
app/api/schemas/: requests.py  responses.py
app/core/: __init__.py
app/core/embeddings/: __init__.py  encoder.py
app/core/graph/: __init__.py  orchestrator.py  state.py
app/db/: __init__.py  models.py
app/services/: analysis_service.py  ingestion.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: cases.py
backend/app/api/schemas/: __init__.py
backend/app/core/graph/: orchestrator.py  state.py
backend/app/core/graph/nodes/: __init__.py  aggregation.py  comprehensive_analysis.py  remediation.py  risk_scoring.py
backend/app/core/graph/nodes/detectors/: missing_assumptions.py  underspecification.py
backend/app/core/llm/: __init__.py  gemini.py  groq.py  prompts.py
backend/app/db/: database.py
backend/app/db/repositories/: __init__.py
backend/app/db/vector/: __init__.py
backend/app/services/: __init__.py  analysis_service.py
backend/tests/test_core/: __init__.py
frontend/: package.json
frontend/src/: index.css
src/: App.tsx  index.css
src/components/: AnalysisForm.tsx  ClaimAnalysisTable.tsx  FailureCard.tsx  Header.tsx  RecommendationCard.tsx  RiskScoreBadge.tsx
src/pages/: About.tsx  Analyze.tsx  CaseDetail.tsx  History.tsx  Landing.tsx  Result.tsx  Taxonomy.tsx
tests/: conftest.py  test_new_features.py
tests/test_api/: test_analysis.py  test_cases.py
tests/test_core/: test_schemas.py
(+20 files in other folders)
